--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.dmitrybrant.android.multitouch"
-      android:versionCode="5"
-      android:versionName="1.4">
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="18"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="false">
-        <activity android:name="com.dmitrybrant.android.multitouch.MultiTouchActivity"
-                  android:label="@string/app_name">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.dmitrybrant.android.multitouch"
+    android:versionCode="6"
+    android:versionName="1.5">
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:allowBackup="false">
+        <activity
+            android:name="com.dmitrybrant.android.multitouch.MultiTouchActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
