--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.dmitrybrant.android.multitouch"
         minSdkVersion 8
-        targetSdkVersion 21
+        targetSdkVersion 22
+        versionCode 7
+        versionName "1.6"
     }
 
     buildTypes {
