--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dmitrybrant.android.multitouch"
-    android:versionCode="6"
-    android:versionName="1.5">
+    package="com.dmitrybrant.android.multitouch">
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
