--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.dmitrybrant.android.multitouch"
         minSdkVersion 8
-        targetSdkVersion 23
-        versionCode 8
-        versionName "1.8"
+        targetSdkVersion 24
+        versionCode 9
+        versionName "1.9"
     }
 
     buildTypes {
@@ -18,4 +18,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
+}
+
+dependencies {
+    compile 'com.android.support:appcompat-v7:24.0.0'
 }
