--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=true
+android.nonTransitiveRClass=true
 android.useAndroidX=true
